--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -5,6 +5,7 @@
 
 
 {% block content %}
+
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
     <header class="intro-header" style="background-image: url('{% static 'main/img/home-bg.jpg' %}')">
@@ -38,7 +39,7 @@
                             </h3>
                         </a>
                         <p class="post-meta">Posted by <a href="#">{{ post.user.username }}</a> on {{ post.post_added | date:'d F, Y, H:m' }}</p>
-                        {% if user.is_authenticated and post.user_id == user.id %}
+                        {% if user.is_authenticated and post.user_id == user.id or user.is_staff %}
                             <a class="" href="{% url 'post-edit' post.id %}"><small><i>edit</i></small></a>
                         {% endif %}
 
