--- a/main/templates/main/post_edit.html
+++ b/main/templates/main/post_edit.html
@@ -9,10 +9,10 @@
 
     <div class="login" style="max-height: 400px; overflow: auto; min-width: 50%;">
         <h3 class="login__title title text-center">Create Post</h3>
-        <form action="{% url 'post-edit' id %}" method="POST" enctype="multipart/form-data">
+        <form action="{% url 'post-edit' object.id %}" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
             {{ form | crispy }}
-            <img src="{{ post.photo.url }}" alt="rasm" class="img-responsive">
+            <img src="{{ object.photo.url }}" alt="rasm" class="img-responsive">
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
     </div>
