--- a/main/templates/layout.html
+++ b/main/templates/layout.html
@@ -110,6 +110,7 @@
 
     <!-- Theme JavaScript -->
     <script src="{% static 'main/js/clean-blog.js' %}"></script>
+    <script src="{% static 'main/js/main.js' %}"></script>
 
     {% block script %}{% endblock %}
 
